# digital_quantum_optimization

./: pyproject.toml
experiments/: optimize_script.py
experiments/number_partitioning_benchmark/: make_plots.py  run_benchmark.py
experiments/number_partitioning_benchmark/data/: 3numbers_No CD_noise0.001.json  3numbers_No CD_noise0.010.json  3numbers_No CD_noise0.100.json  3numbers_YZY_noise0.001.json  3numbers_YZY_noise0.010.json  3numbers_YZY_noise0.100.json  3numbers_Y_noise0.001.json  3numbers_Y_noise0.010.json  3numbers_Y_noise0.100.json  4numbers_No CD_noise0.001.json  4numbers_No CD_noise0.010.json  4numbers_No CD_noise0.100.json  4numbers_YZY_noise0.001.json  4numbers_YZY_noise0.010.json  4numbers_YZY_noise0.100.json  4numbers_Y_noise0.001.json  4numbers_Y_noise0.010.json  4numbers_Y_noise0.100.json  5numbers_No CD_noise0.001.json  5numbers_No CD_noise0.010.json  5numbers_No CD_noise0.100.json  5numbers_YZY_noise0.001.json  5numbers_YZY_noise0.010.json  5numbers_Y_noise0.001.json  5numbers_Y_noise0.010.json  5numbers_Y_noise0.100.json
src/digital_quantum_optimization/: __init__.py  circuit.py  layers.py  optimize_circuit.py
src/digital_quantum_optimization/benchmarking/: __init__.py  _number_partitioning.py
src/dqao/: __init__.py  circuit.py  optimize_circuit.py  qubo.py
src/dqao/benchmarking/: __init__.py  _number_partitioning.py
test/: test_qubo.py
test/benchmarking/: test_number_partitioning.py
