[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dqao"
version = "0.0.1b1"
dependencies = [
  "numpy",
  "pennylane",
]
requires-python = ">=3.9"
authors = [
  {name = "Bob Varens", email = "bobvarens@example.com"},
]
maintainers = [
  {name = "Bob Varens", email = "bobvarens@example.com"}
]
description = "Digital Quantum Adiabetic Optimization"
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENCSE"]
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.ruff.lint]
select = ["I"]
ignore = []

